# Commitlabs-Frontend

./: DEVELOPER_GUIDE.md  SettlementModal.tsx  SettlementPage.tsx  ci.yml  next.config.js  pnpm-lock.yaml  validate-openapi.sh
.github/workflows/: coverage.yml
contracts/: Cargo.toml  README.md
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
design/export-reporting/: README.md  export-flow.md
design/iconography/: README.md
docs/: COMMITMENT_DETAIL_ACTIONS.md  FRONTEND_ARCHITECTURE.md  SellerTrustGuidelines.md  api-response-format.md  backend-api-reference.md  backend-cors-policy.md  backend-error-codes.md  backend-performance-guidelines.md  commitment-status-endpoint.md  coverage-ci.md  session-implementation.md  skeleton-loading-patterns.md  success-state-ux.md  unified-api-response-contract.md
docs/testing/: TRUST_BADGE_TESTS.md
scripts/: fix_tests.py  patch_backend_api.py  run-smoke-tests.js
src/app/: globals.css  layout.tsx
src/app/commitments/: layout.tsx  page.tsx
src/app/create/: layout.tsx  page.tsx
src/app/marketplace/: page.tsx
src/components/: CommitmentDetailActions.tsx  CommitmentDetailOverview.tsx  CreateCommitmentStepConfigure.tsx  CreateCommitmentStepReview.tsx  CreateCommitmentStepSelectType.tsx  HealthMetricsSkeleton.tsx  MarketplaceCard.tsx  MarketplaceGridSkeleton.tsx  MyCommitmentsGridSkeleton.tsx  MyCommitmentsHeader.tsx  ReputationDisplay.tsx  Skeleton.tsx  TrustBadge.tsx
tests/: README-smoke-coverage.md  SettlementModal.test.tsx
tests/api/: contracts.service.retry.test.ts  helpers.ts  metrics.test.ts
(+74 files in other folders)
